--- a/README.org
+++ b/README.org
@@ -35,8 +35,10 @@ Let's avoid using the same name to refer to different things and enjoy simpler p
   - TODO
 * Development
 To run tests, perform ~lein midje~ or ~lein midje :autotest~ for the command line.
-* NOTES:
 * TODO
+syms (for [s (loom/nodes graph)]
+               (gensym (name s)))
+
 - implement implicits
   - implicits should take in a set of vars
 - validate output as well
