--- a/README.org
+++ b/README.org
@@ -104,7 +104,12 @@ By creating a glossary or "concept map", we create a central place for understan
     ;; Laziness is a virtue
     (bar-fn :foo 42 :a (throw Exception.)) ;; 42
   #+END_SRC
-  - TODO show lazy example
+- macroexpand-time validation of implicits
+  #+BEGIN_SRC clojure
+    (when nil
+      ;; I don't run
+      (bar-fn :q 11)) ;; ERROR
+  #+END_SRC
 - solves the "big let" problem by breaking the problem down into domain-level concepts
 - solves the problem of dependency passing (normal solutions involve explicitly declaring dependencies of all your dependencies or passing an opaque options map or using dynamic vars; parameters are coupled either way)
   - eg. x calls y
@@ -114,7 +119,6 @@ By creating a glossary or "concept map", we create a central place for understan
     - later:
       - the arguments of x contains some map containing the arguments of y
       - in order to understand how x is called, you need to understand y
-- macroexpand-time validation of implicits to make sure all the data that is needed is available before the system is running
 **** Potential Benefits
 - could allow for optimizations in the future with batching (group together db calls), parallelization (evaluating the DAG of function calls), or intelligently picking the lowest cost route from the input to the desired data (assigning costs to each function and automatically switching over to a more efficient query)
 - auto-testing : by having multiple ways to solve for the same thing, a test suite can be automatically run to make sure each way returns the same result
