--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 * outfn
-A macro for simpler, clearer, more declarative functions (that are actually macros).
+A macro for clearer, more declarative functions (that are actually macros) through an emphasis on names.
 
 If you've thought to yourself any of the following, read on:
 - What is this function and what do the arguments mean?
@@ -156,12 +156,15 @@ By creating a glossary or "concept map", we create a central place for understan
     - later:
       - the arguments of x contains some map containing the arguments of y
       - in order to understand how x is called, you need to understand y
-**** Potential Benefits (for Implicits)
-- could allow for optimizations in the future with batching (group together db calls), parallelization (evaluating the DAG of function calls), or intelligently picking the lowest cost route from the input to the desired data (assigning costs to each function and automatically switching over to a more efficient query)
-- auto-testing : by having multiple ways to solve for the same thing, a test suite can be automatically run to make sure each way returns the same result
-  - TODO
+**** Future Benefits of Implicits
 - easier debugging
-  - TODO try-catch can be automatically generated, and all the relevant information can be thrown on an exception
+  - try-catch can be automatically generated, and all the relevant information can be thrown on an exception
+- optimizations
+  - batching (eg. group together DB calls)
+  - parallelization (evaluating the DAG on function calls)
+  - determining the lowest cost route from the input to the desired data (assigning cost to each function call)
+- auto-testing : by having multiple ways to solve for the same thing, a test suite can be automatically run to make sure each way returns the same result
+  - eg. if there are multiple way to compute the same value, they can all be computed and compared to each other for validation
 ** Things to watch out for
 - when multiple matches are possible, but not an exact match, the first match is chosen:
   #+BEGIN_SRC clojure
