--- a/README.org
+++ b/README.org
@@ -156,9 +156,8 @@ By creating a glossary or "concept map", we create a central place for understan
     - later:
       - the arguments of x contains some map containing the arguments of y
       - in order to understand how x is called, you need to understand y
-  - let's have an example:
+  - let's have an example... start with two functions... they're all nice and understandable
     #+BEGIN_SRC clojure
-      ;; let's start with two functions... they're all nice and understandable
       (defn gimme-data
         "Returns raw data"
         [db some-options]
@@ -170,48 +169,51 @@ By creating a glossary or "concept map", we create a central place for understan
         [data]
         (let [top-secret-filter identity]
           (top-secret-filter data)))
-
-      ;; in order to know how to call this function, I need to know how to call
-      ;; the functions it calls!
-      (defn gimme-filtered-data
-        [db some-options]
-        (filter-data (gimme-data db some-options)))
-
-      (defn api-call-coupled1
-        []
-        (let [db :just-kidding
-              some-options {:something :something}]
-          (gimme-filtered-data db some-options)))
-
-      (defn api-call-coupled2
-        []
-        (let [db :just-kidding
-              some-options {:something :something}]
-          ;; do I need to have all my db calls in my top-level calls just to have
-          ;; decoupled code?
-          (filter-data (gimme-filtered-data db some-options))))
-
-      (defoutfn data-outfn {:output :data}
-        "Returns raw data"
-        [db some-options]
-        ;; do some stuff with all these inputs...
-        :data)
-
-      (def db-calls #{#'data-outfn})
-
-      (defoutfn filtered-data-outfn {:output :filtered-data
-                                     :implicits db-calls}
-        "Returns filtered data"
-        [data]
-        (let [top-secret-filter identity]
-          (top-secret-filter data)))
-
-      (defn api-call-with-implicits
-        []
-        (let [db :just-kidding
-              some-options {:something :something}]
-          (filtered-data-outfn :db db :some-options some-options)))
     #+END_SRC
+  - what if we want an api call to get filtered data? how do we call them together?
+    - Option A: have a different function that wraps the two functions together. We have a problem though: What's some-options? What kind of db? In order to know how to call this function, I need to know how to call the functions it calls.
+      #+BEGIN_SRC clojure
+        (defn gimme-filtered-data
+          [db some-options]
+          (filter-data (gimme-data db some-options)))
+
+        (defn api-call-coupled1
+          []
+          (let [db :just-kidding
+                some-options {:something :something}]
+            (gimme-filtered-data db some-options)))
+      #+END_SRC
+    - Option B: Call them at the top level and connect them there. Problem: Do I need to have all my db calls in my top-level calls just to have decoupled code?
+      #+BEGIN_SRC clojure
+        (defn api-call-coupled2
+          []
+          (let [db :just-kidding
+                some-options {:something :something}]
+            (filter-data (gimme-filtered-data db some-options))))
+      #+END_SRC
+    - Option C: Use implicits and not have to write any glue code!
+      #+BEGIN_SRC clojure
+        (defoutfn data-outfn {:output :data}
+          "Returns raw data"
+          [db some-options]
+          ;; do some stuff with all these inputs...
+          :data)
+
+        (def db-calls #{#'data-outfn #'some-other-db-call #'put-all-db-calls-together})
+
+        (defoutfn filtered-data-outfn {:output :filtered-data
+                                       :implicits db-calls}
+          "Returns filtered data"
+          [data]
+          (let [top-secret-filter identity]
+            (top-secret-filter data)))
+
+        (defn api-call-with-implicits
+          []
+          (let [db :just-kidding
+                some-options {:something :something}]
+            (filtered-data-outfn :db db :some-options some-options)))
+      #+END_SRC
 **** Future Benefits of Implicits
 - easier debugging
   - try-catch can be automatically generated, and all the relevant information can be thrown on an exception
